<resources>
    <!--    Strings used for add/edit item fragment-->
    <string name="app_name">Wish list</string>
    <string name="itemlist_add_header">Add New Item</string>
    <string name="itemlist_name_add">Enter item name</string>
    <string name="itemlist_category_add">Enter item category</string>
    <string name="itemlist_price_add">Enter item price</string>
    <string name="currency">Currency</string>
    <string name="item_store_add">Enter store</string>
    <string name="item_info_add">Enter additional information</string>
    <string name="item_purchase_add">Item Purchased or not</string>
    <string name="btn_add">Add</string>
    <string name="btn_close">Close</string>
    <string name="add_btn_text">Add</string>
    <string name="update_btn_text">Update</string>
    <string name="add_item_header">Add New Item</string>
    <string name="update_item_header">Update Item</string>
    <string name="error_item">Input field(s) required</string>

    <!-- Strings used for itemlist -->
    <string name="item_name">Name</string>
    <string name="item_category">Category</string>
    <string name="item_price">Price</string>
    <string name="item_store">Store</string>
    <string name="item_info">Information</string>
    <string name="item_purchase">Purchased or Not</string>
    <string name="menu_btn_edit">Edit</string>
    <string name="menu_btn_delete">Delete</string>
    <string name="delete_itemlist">Are you sure you want to delete this item?</string>

    <!--    Strings used for Maps-->
    <string name="url_warehouse">https://www.thewarehouse.co.nz/</string>
    <string name="url_noel_leeming">https://www.noelleeming.co.nz/</string>
    <string name="url_kmart">https://www.kmart.co.nz/</string>
    <string name="google_maps_key">AIzaSyBOm2SY3mY9Awm8qmxoIMWT236M3bGZB8k</string>

    <!-- Strings used for navigation header-->
    <string name="nav_header_info">Wishlist</string>
    <string name="exit">Exit</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="notifications">Notifications</string>
    <string name="about_us">About Us</string>
    <string name="privacy_url">https://rubandass.github.io/</string>

    <!--    Strings used for Exit alert dialog-->
    <string name="msgConfirmation">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--    Strings used for About us dialog-->
    <string name="about_us_msg1">This application is developed for educational purpose</string>
    <string name="about_us_msg2">Developed by Rubandass &amp; Yash, students at Otago polytechnic</string>
    <string name="about_us_msg3">Any query\'s, please send email to \'bitmobileopltd@gmail.com\'</string>
    <string name="about_us_close">Close</string>

<!--    Strings used for filters-->
    <string name="all_items">All items</string>
    <string name="purchased">Purchased</string>
    <string name="notpurchased">Not purchased</string>
    <string name="newfirst">Newest First</string>
    <string name="oldfirst">Oldest First</string>
    <string name="ass">Ascending</string>
    <string name="des">Descending</string>
    <string name="name">item_name</string>

    <string name="price">item_price</string>
    <string name="purchasedOrNot">item_purchase</string>
    <string name="store">item_store</string>
    <string name="additionalInfo">item_info</string>
    <string name="image">image</string>
    <string name="dateTime">item_datetime</string>
    <string name="category">All categories</string>
    <string name="total">Total</string>


</resources>
