<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <TextView
                android:id="@+id/txvItemlistHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:text="@string/itemlist_add_header"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/form_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:autofillHints="@string/itemlist_name_add"
                android:hint="@string/itemlist_name_add"
                android:textSize="@dimen/text_size">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtItemNameAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:autofillHints="@string/itemlist_category_add"
                android:hint="@string/itemlist_category_add"
                android:textSize="@dimen/text_size">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtItemCategoryAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:autofillHints="@string/itemlist_price_add"
                android:hint="@string/itemlist_price_add"
                android:textSize="@dimen/text_size"
                android:layout_weight="0.5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtItemPriceAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

          <Spinner
                android:id="@+id/spinnerCurrencyDialog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="0.5"
                android:popupBackground="#ffffff" />

        </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:autofillHints="@string/item_info_add"
                android:hint="@string/item_info_add"
                android:textSize="@dimen/text_size">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtItemInfoAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_weight=".8"
                    android:autofillHints="@string/item_store_add"
                    android:hint="@string/item_store_add"
                    android:textSize="@dimen/text_size">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtItemStoreAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                    <Button
                        android:id="@+id/btnMap"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".2"
                        android:layout_marginTop="7dp"
                        app:icon="@drawable/ic_add_location_black_24dp"
                        android:textColor="@color/colorWhite"/>


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="parent">

                <ImageView
                    android:id="@+id/imvItem"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="@dimen/margin_top"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/default_item_image" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/imgBtnAddItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_picture_add_symbol"
                    app:layout_constraintBottom_toBottomOf="@+id/imvItem"
                    app:layout_constraintEnd_toEndOf="@+id/imvItem" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_toStartOf="@+id/view"
                    android:layout_weight="0.5"
                    android:text="@string/btn_add"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btnClose"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_toEndOf="@+id/view"
                    android:layout_weight="0.5"
                    android:text="@string/btn_close"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>