<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".4">

            <ImageView
                android:id="@+id/imvItemList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_margin="@dimen/margin_top"
                 />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin_top"
                android:layout_weight=".6"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/txvItemName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_weight=".85"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/item_name"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="#2196F3"/>

                    <ImageButton
                        android:id="@+id/imgBtnItemlistMenu"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight=".15"
                        android:background="@null"
                        app:srcCompat="@drawable/ic_more_vert_black_24dp"
                        tools:ignore="VectorDrawableCompat" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txvItemCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/item_margin_right"
                    android:layout_marginBottom="4dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="#B4BCC3"
                    android:text="@string/item_category"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/txvItemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/item_margin_right"
                    android:layout_marginBottom="2dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/item_price"
                    android:textColor="#009688"
                    android:textSize="14sp" />

<!--                <TextView-->
<!--                    android:id="@+id/txvItemStore"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginRight="@dimen/item_margin_right"-->
<!--                    android:layout_marginBottom="4dp"-->
<!--                    android:ellipsize="end"-->
<!--                    android:maxLines="1"-->
<!--                    android:text="@string/item_store"-->
<!--                    android:textSize="@dimen/text_size" />-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <CheckBox
                        android:id="@+id/cbxPurchase"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <Button
                        android:id="@+id/btnDetail"
                        android:layout_width="75dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:text="Detail"
                        android:textSize="10sp">

                    </Button>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>